# linea-ai

./: .env.example  Cargo.toml  README.md
src/: main.rs
src/commands/: about.rs  chat.rs  delete_context.rs  mod.rs  prompt.rs  set_model.rs
src/dialogs/: about_dialog.rs  chat_dialog.rs  delete_dialog.rs  mod.rs  set_model_dialog.rs
src/env/: get_env.rs
src/queries/: add_prompt_to_user_context.rs  create_server_query.rs  create_server_table.rs  create_user_context_query.rs  create_user_context_table.rs  delete_context_query.rs  get_user_context_query.rs  mod.rs  search_server_model.rs
src/utils/: db.rs  mod.rs  replicate.rs
