[package]
name = "linea_bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
once_cell = "1.19.0"
poise = "0.6.1"
replicate-rust = "0.0.5"
serde_json = "1.0.117"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite"] }
